--- a/src/index.css
+++ b/src/index.css
@@ -124,5 +124,6 @@ input:-webkit-autofill:focus
 input:-webkit-autofill{
   -webkit-text-fill-color: black !important;
   -webkit-box-shadow: 0 0 0px 0px #28292D inset !important;
+  box-shadow: 0 0 0px 0px #28292D inset !important;
   transition: background-color 5000s ease-in-out 0s !important;
 }
